AUTHORS: update, complete list of contributors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,14 @@
-Phil Knirsch
-Jan Včelák
+Based on old tuned/ktune code by:
+- Philip Knirsch
+- Thomas Woerner
+
+Significant contributors:
+- Jan Vcelak
+- Jan Kaluza
+- Jaroslav Skarvada
+
+Other contributors:
+- Petr Lautrbach
+- Marcela Maslanova
+- Jarod Wilson
+- Jan Hutar
