--- a/man/tuned-adm.8
+++ b/man/tuned-adm.8
@@ -59,12 +59,13 @@ Switch off tuned.
 At the moment we're providing the following pre defined profiles:
 
 .TP
-.BI "default"
-This is the default power saving profile. It is the lowest of the available profiles in regard to power saving and only enables CPU and disk plugins of tuned.
+.BI "balanced"
+It is the default profile. It provides balanced power saving and performance. At the moment it enables CPU and disk plugins of tuned and it makes sure the ondemand governor is active. It also enables AC97 audio power saving or (it depends on your system) HDA-Intel power savings (with 10 seconds timeout). In case your system contains supported Radeon graphics card (with enabled KMS) it configures it to automatic power saving.
+
 
 .TP
 .BI "powersave"
-Maximal power saving, at the moment it enables USB autosuspend (in case environment variable USB_AUTOSUSPEND is set to 1), enables ALPM power saving for SATA host adapters, enables WiFi power saving, enables multi core power savings scheduler for low wakeup systems and makes sure the ondemand governor is active. It also enables AC97 audio power saving or (it depends on your system) HDA-Intel power savings (with 10 seconds timeout). In case your system contains supported Radeon graphics card (and KMS is enabled) it is configured to automatic power saving. On Asus Eee PCs dynamic Super Hybrid Engine is enabled.
+Maximal power saving, at the moment it enables USB autosuspend (in case environment variable USB_AUTOSUSPEND is set to 1), enables ALPM power saving for SATA host adapters, enables WiFi power saving, enables multi core power savings scheduler for low wakeup systems and makes sure the ondemand governor is active. It also enables AC97 audio power saving or (it depends on your system) HDA-Intel power savings (with 10 seconds timeout). In case your system contains supported Radeon graphics card (with enabled KMS) it configures it to automatic power saving. On Asus Eee PCs dynamic Super Hybrid Engine is enabled.
 
 .TP
 .BI throughput-performance
@@ -84,6 +85,10 @@ Profile optimized for virtual hosts based on enterprise-storage profile. It addi
 
 .SH PREDEFINED COMPAT PROFILES
 We are also providing so called "compat" profiles that are here mostly for backward compatibility with tuned 1.0. They are oriented to more specific scenarios.
+
+.TP
+.BI "default"
+It is the lowest of the available profiles in regard to power saving and only enables CPU and disk plugins of tuned.
 
 .TP
 .BI "desktop-powersave"
