plugins: added plugin for Asus Eee PC Super Hybrid Engine (SHE)

--- a/man/tuned.conf.5
+++ b/man/tuned.conf.5
@@ -29,7 +29,7 @@ Every plugin section can contain following sections:
 
 .TP
 type=
-Plugin type. Currently there are following plugins: disk, script, net, cpu.
+Plugin type. Currently there are following plugins: disk, script, net, cpu, eeepc_she.
 .TP
 devices=
 Comma separated list of devices which should be tuned by this plugin instance.
