write README, some base information about usage

--- a/README
+++ b/README
@@ -1,1 +1,87 @@
-Possibly future version of tuned daemon. Currently under heavy development.
+Tuned: Daemon for monitoring and adaptive tuning of system devices.
+
+(This is tuned 2.0 with a new code base. If you are looking for the older
+version, please check out branch '1.0' in our Git repository.)
+
+How to use it
+-------------
+
+In Fedora, Red Hat Enterprise Linux, and their derivates install tuned package
+(optionally tuned-utils, tuned-utils-systemtap, and tuned-profiles-compat):
+
+# yum install tuned
+
+After the installation, start the tuned service:
+
+# systemctl start tuned
+
+You might also want to run tuned whenever your machine starts:
+
+# systemctl enable tuned
+
+If the daemon is running you can easily control it using 'tuned-adm' command
+line utility. This tool communicates with the daemon over DBus. Any user can
+list the available profiles and see which one is active. But the profiles can
+be switched only by root user or by any user with physical console allocated
+on the machine (X11, physical tty, but no SSH).
+
+To see the current active profile, run:
+
+$ tuned-adm active
+
+To list all available profiles, run:
+
+$ tuned-adm list
+
+To switch to a different profile, run:
+
+# tuned-adm profile <profile-name>
+
+And to disable all tunings, run:
+
+# tuned-adm off
+
+Your profile choice is also written into /etc/tuned/active_profile and this
+choice is used when the daemon is restarted (e.g. with the machine reboot).
+
+
+Available tunings
+-----------------
+
+We are currenlty working on many new tuning features. Some are described in
+the manual pages, some are yet undocumented.
+
+
+Authors
+-------
+
+The best way to contact the authors of the project is to use our mailing list:
+power-management@lists.fedoraproject.org
+
+In case you want to contact individual author, you will find the e-mail
+address in every commit message in our Git repository:
+http://git.fedorahosted.org/cgit/tuned.git
+
+You can also join #fedora-power IRC channel on Freenode.
+
+
+License
+-------
+
+Copyright (C) 2008-2012 Red Hat, Inc.
+
+This program is free software; you can redistribute it and/or
+modify it under the terms of the GNU General Public License
+as published by the Free Software Foundation; either version 2
+of the License, or (at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
+
+Full text of the license is enclosed in COPYING file.
