man: fixed profile option
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/man/tuned.8
+++ b/man/tuned.8
@@ -53,7 +53,7 @@ Do not attach to DBus.
 .BI \-P " \fR[" \fIPID "\fR], " \fB\-\-pid \fR[ \fB=\fIPID\fR]\fP
 Write process ID to the \fBPID\fP file. If no \fIPID\fP file is specified \fB/run/tuned/tuned.pid\fP is used.
 .TP 12
-.BI  \-p "\fR, \fP" \-\-profile
+.BI  \-p "\fR \fP" \fIPROFILE\fP "\fR, \fP" \-\-profile "\fR \fP" \fIPROFILE\fP
 Tunning profile to be activated. It will override other settings (e.g. from \fBtuned-adm\fP).
 This is intended for debugging purposes.
 .TP 12
