man: updated latency-performance profile description
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/man/tuned-adm.8
+++ b/man/tuned-adm.8
@@ -73,7 +73,7 @@ Profile for typical throughput performance tuning. Disables power saving mechani
 
 .TP
 .BI latency-performance
-Profile for low latency performance tuning. Disables power saving mechanisms and enables deadline IO scheduler. CPU governor is set to performance.
+Profile for low latency performance tuning. Disables power saving mechanisms and enables deadline IO scheduler. CPU governor is set to performance and locked to the low C states (by PM QoS).
 
 .TP
 .BI "virtual-guest"
