--- a/man/tuned-adm.8
+++ b/man/tuned-adm.8
@@ -62,14 +62,13 @@ At the moment we're providing the following pre defined profiles:
 .BI "balanced"
 It is the default profile. It provides balanced power saving and performance. At the moment it enables CPU and disk plugins of tuned and it makes sure the ondemand governor is active. It also enables AC97 audio power saving or (it depends on your system) HDA-Intel power savings (with 10 seconds timeout). In case your system contains supported Radeon graphics card (with enabled KMS) it configures it to automatic power saving.
 
-
 .TP
 .BI "powersave"
 Maximal power saving, at the moment it enables USB autosuspend (in case environment variable USB_AUTOSUSPEND is set to 1), enables ALPM power saving for SATA host adapters, enables WiFi power saving, enables multi core power savings scheduler for low wakeup systems and makes sure the ondemand governor is active. It also enables AC97 audio power saving or (it depends on your system) HDA-Intel power savings (with 10 seconds timeout). In case your system contains supported Radeon graphics card (with enabled KMS) it configures it to automatic power saving. On Asus Eee PCs dynamic Super Hybrid Engine is enabled.
 
 .TP
 .BI throughput-performance
-Profile for typical throughput performance tuning. Disables power saving mechanisms and enables sysctl settings that improve the throughput performance of your disk and network IO and switches to the deadline scheduler. CPU governor is set to performance.
+Profile for typical throughput performance tuning. Disables power saving mechanisms and enables sysctl settings that improve the throughput performance of your disk and network IO and switches to the deadline scheduler. CPU governor is set to performance and disk readahead values are increased.
 
 .TP
 .BI latency-performance
@@ -77,11 +76,11 @@ Profile for low latency performance tuning. Disables power saving mechanisms and
 
 .TP
 .BI "virtual-guest"
-Profile optimized for virtual guests based on throughput-performance profile. It additionally decreases virtual memory swapiness. It doesn't disable disk barriers. Disk readahead values are increased.
+Profile optimized for virtual guests based on throughput-performance profile. It additionally decreases virtual memory swapiness. It doesn't disable disk barriers.
 
 .TP
 .BI "virtual-host"
-Profile optimized for virtual hosts based on throughput-performance profile. It additionally decreases virtual memory swapiness and enables more aggresive writeback of dirty pages. Disk readahead values are increased.
+Profile optimized for virtual hosts based on throughput-performance profile. It additionally decreases virtual memory swapiness and enables more aggresive writeback of dirty pages.
 
 .SH PREDEFINED COMPAT PROFILES
 We are also providing so called "compat" profiles that are here mostly for backward compatibility with tuned 1.0. They are oriented to more specific scenarios.
