profiles: various updates according to feedback from performance team
Related: rhbz#922068

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/man/tuned-adm.8
+++ b/man/tuned-adm.8
@@ -28,9 +28,19 @@ tuned-adm \- commandline tool for switching between different tuning profiles
 .BR [ " list ", " active ", " profile <profile> ", " off " ]
 .br
 .SH DESCRIPTION
-This command line utility allows user to switch between user definable tuning profiles. Several predefined profiles are already included. You can even create your own profile, either based on one of the existing ones by copying it or make a completely new one. The distribution provided profiles are stored in subdirectories below /usr/lib/tuned and the user defined profiles in subdirectories below /etc/tuned. If there are same profiles on both places, User defined profiles have precedence. 	
+This command line utility allows user to switch between user definable tuning
+profiles. Several predefined profiles are already included. You can even
+create your own profile, either based on one of the existing ones by copying
+it or make a completely new one. The distribution provided profiles are stored
+in subdirectories below /usr/lib/tuned and the user defined profiles in
+subdirectories below /etc/tuned. If there are same profiles on both places,
+user defined profiles have precedence.
 
-The power saving profiles contain settings that are typically not enabled by default as they will noticeably impact the latency/performance of your system as opposed to the power saving mechanisms that are enabled by default. On the other hand the performance profiles disable the additional power saving mechanisms of tuned as they would negatively impact throughput or latency.
+The power saving profiles contain settings that are typically not enabled by
+default as they will noticeably impact the latency/performance of your system
+as opposed to the power saving mechanisms that are enabled by default. On the
+other hand the performance profiles disable the additional power saving
+mechanisms of tuned as they would negatively impact throughput or latency.
 
 .SH "OPTIONS"
 
@@ -45,11 +55,17 @@ Show current active profile.
 
 .TP
 .B profile <profile>
-Switches to the given profilename. If none is given or no valid one is given the command gracefully exits without performing any operation.
+Switches to the given profilename. If none is given or no valid one is given
+the command gracefully exits without performing any operation.
 
 .TP
 .B recommend
-Recommend profile suitable for your system. Currently only static detection is implemented - it decides according to data in /etc/system-release-cpe and virt-what output. The rules for autodetection are defined in recommend.conf in profile directory. They can be overriden by user by putting the recommend.conf into /etc/tuned. The default rules recommends profiles targeted to the best performance or balanced profile if unsure.
+Recommend profile suitable for your system. Currently only static detection is
+implemented - it decides according to data in /etc/system-release-cpe and
+virt-what output. The rules for autodetection are defined in recommend.conf in
+profile directory. They can be overriden by user by putting the recommend.conf
+into /etc/tuned. The default rules recommends profiles targeted to the best
+performance or balanced profile if unsure.
 
 .TP
 .B off
@@ -60,58 +76,100 @@ At the moment we're providing the following pre defined profiles:
 
 .TP
 .BI "balanced"
-It is the default profile. It provides balanced power saving and performance. At the moment it enables CPU and disk plugins of tuned and it makes sure the ondemand governor is active. It also enables AC97 audio power saving or (it depends on your system) HDA-Intel power savings (with 10 seconds timeout). In case your system contains supported Radeon graphics card (with enabled KMS) it configures it to automatic power saving.
+It is the default profile. It provides balanced power saving and performance.
+At the moment it enables CPU and disk plugins of tuned and it makes sure the
+ondemand governor is active (if supported by the current cpufreq driver). It
+sets the CPU energy performance bias to normal. It also enables AC97 audio
+power saving or (it depends on your system) HDA-Intel power savings with 10
+seconds timeout. In case your system contains supported Radeon graphics card
+(with enabled KMS) it configures it to automatic power saving.
 
 .TP
 .BI "powersave"
-Maximal power saving, at the moment it enables USB autosuspend (in case environment variable USB_AUTOSUSPEND is set to 1), enables ALPM power saving for SATA host adapters, enables WiFi power saving, enables multi core power savings scheduler for low wakeup systems and makes sure the ondemand governor is active. It also enables AC97 audio power saving or (it depends on your system) HDA-Intel power savings (with 10 seconds timeout). In case your system contains supported Radeon graphics card (with enabled KMS) it configures it to automatic power saving. On Asus Eee PCs dynamic Super Hybrid Engine is enabled.
+Maximal power saving, at the moment it enables USB autosuspend (in case
+environment variable USB_AUTOSUSPEND is set to 1), enables ALPM power saving
+for SATA host adapters, enables WiFi power saving, enables multi core power
+savings scheduler for low wakeup systems and makes sure the ondemand governor
+is active (if supported by the current cpufreq driver). It sets the CPU energy
+performance bias to powersave. It also enables AC97 audio power saving or (it
+depends on your system) HDA-Intel power savings (with 10 seconds timeout).
+In case your system contains supported Radeon graphics card (with enabled KMS)
+it configures it to automatic power saving. On Asus Eee PCs dynamic Super
+Hybrid Engine is enabled.
 
 .TP
 .BI throughput-performance
-Profile for typical throughput performance tuning. Disables power saving mechanisms and enables sysctl settings that improve the throughput performance of your disk and network IO and switches to the deadline scheduler. CPU governor is set to performance and disk readahead values are increased.
+Profile for typical throughput performance tuning. Disables power saving
+mechanisms and enables sysctl settings that improve the throughput performance
+of your disk and network IO. CPU governor is set to performance and CPU energy
+performance bias is set to performance. Disk readahead values are increased.
 
 .TP
 .BI latency-performance
-Profile for low latency performance tuning. Disables power saving mechanisms and enables deadline IO scheduler. CPU governor is set to performance and locked to the low C states (by PM QoS).
+Profile for low latency performance tuning. Disables power saving mechanisms.
+CPU governor is set to performance andlocked to the low C states (by PM QoS).
+CPU energy performance bias to performance.
+
+.TP
+.BI "desktop"
+Profile optimized for desktops based on balanced profile. It additionaly
+enables scheduler autogroups for better response of interactive applications.
 
 .TP
 .BI "virtual-guest"
-Profile optimized for virtual guests based on throughput-performance profile. It additionally decreases virtual memory swapiness. It doesn't disable disk barriers.
+Profile optimized for virtual guests based on throughput-performance profile.
+It additionally decreases virtual memory swapiness and increases dirty_ratio
+settings.
 
 .TP
 .BI "virtual-host"
-Profile optimized for virtual hosts based on throughput-performance profile. It additionally decreases virtual memory swapiness and enables more aggresive writeback of dirty pages.
+Profile optimized for virtual hosts based on throughput-performance profile.
+It additionally enables more aggresive writeback of dirty pages.
 
 .SH PREDEFINED COMPAT PROFILES
-We are also providing so called "compat" profiles that are here mostly for backward compatibility with tuned 1.0. They are oriented to more specific scenarios.
+We are also providing so called "compat" profiles that are here mostly for
+backward compatibility with tuned 1.0. They are oriented to more specific
+scenarios.
 
 .TP
 .BI "default"
-It is the lowest of the available profiles in regard to power saving and only enables CPU and disk plugins of tuned.
+It is the lowest of the available profiles in regard to power saving and only
+enables CPU and disk plugins of tuned.
 
 .TP
 .BI "desktop-powersave"
-A power saving profile directed at desktop systems. Enables ALPM power saving for SATA host adapters as well as the CPU, ethernet and disk plugins of tuned.
+A power saving profile directed at desktop systems. Enables ALPM power saving
+for SATA host adapters as well as the CPU, ethernet and disk plugins of tuned.
 
 .TP
 .BI server-powersave
-A power saving profile directed at server systems. Enables ALPM power saving for SATA host adapters, and activates the CPU and disk plugins of tuned.
+A power saving profile directed at server systems. Enables ALPM power saving
+for SATA host adapters, and activates the CPU and disk plugins of tuned.
 
 .TP
 .BI laptop-ac-powersave
-Medium power saving profile directed at laptops running on AC. Enables ALPM power saving for SATA host adapters,  WiFi power saving as well as CPU, ethernet and disk plugins of tuned.
+Medium power saving profile directed at laptops running on AC. Enables ALPM
+power saving for SATA host adapters,  WiFi power saving as well as CPU,
+ethernet and disk plugins of tuned.
 
 .TP
 .BI laptop-battery-powersave
-Strong power saving profile directed at laptops running on battery. Currently an alias to powersave profile.
+Strong power saving profile directed at laptops running on battery. Currently
+an alias to powersave profile.
 
 .TP
 .BI "spindown-disk"
-Strong power saving profile directed at machines with classic HDDs. It enables aggressive disk spin-down. Disk writeback values are increased and disk swappiness is lowered. Log syncing is disabled. All partitions are remounted with 'noatime' option. All tuned plugins are disabled.
+Strong power saving profile directed at machines with classic HDDs. It enables
+aggressive disk spin-down. Disk writeback values are increased and disk
+swappiness is lowered. Log syncing is disabled. All partitions are remounted
+with 'noatime' option. All tuned plugins are disabled.
 
 .TP
 .BI "enterprise-storage"
-Server profile for high disk throughput performace tuning. Disables power saving mechanisms and enables deadline IO scheduler. Enables hugepages and disables disk barriers. Disk readahead values are increased. CPU governor is set to performance.
+Server profile for high disk throughput performace tuning. Disables power
+saving mechanisms and enables deadline IO scheduler. Enables hugepages and
+disables disk barriers. Disk readahead values are increased. CPU governor is
+set to performance.
 
 .SH "FILES"
 .nf
