--- a/man/tuned-adm.8
+++ b/man/tuned-adm.8
@@ -126,6 +126,13 @@ settings.
 Profile optimized for virtual hosts based on throughput-performance profile.
 It additionally enables more aggresive writeback of dirty pages.
 
+.TP
+.BI "sap"
+Profile optimized for the best performance of SAP software. It is based on
+throughput-performance profile. It additionally tunes sysctl settings
+regarding shared memory, semaphores and maximum number of memory map
+areas a process may have.
+
 .SH PREDEFINED COMPAT PROFILES
 We are also providing so called "compat" profiles that are here mostly for
 backward compatibility with tuned 1.0. They are oriented to more specific
