--- a/man/tuned-main.conf.5
+++ b/man/tuned-main.conf.5
@@ -16,17 +16,31 @@ will be used. Please note if it is enabled here, it is still possible
 to individually disable it in plugins.
 
 .TP
+.BI sleep_interval= INT
+Tuned daemon is periodically waken after \fIINT\fR seconds and checks
+for events. By default this is set to 1 second. If you have Python 2
+interpreter with applied patch from Red Hat Bugzilla #917709 this
+controls responsiveness time of Tuned to commands (i.e. if you
+request profile switch, it may take up to 1 second until Tuned reacts).
+Increase this number for higher responsiveness times and more power
+savings (due to lower number of wakeups). In case you have unpatched
+Python 2 interpreter, this settings will have no visible effect,
+because the intepreter will poll 20 times per second.
+
+.TP
 .BI update_interval= INT
 Update interval for dynamic tuning (in seconds). Tuned daemon is periodically
 waken after \fIINT\fR seconds, updates its monitors, calculates new tuning
 parameters for enabled plugins and applies the changes. Plugins that have
 disabled dynamic tuning are not processed. By default the \fIINT\fR is set
 to 10 seconds. Tuned daemon doesn't periodically wake if dynamic tuning is
-globally disabled (see \fBdynamic_tuning\fR).
+globally disabled (see \fBdynamic_tuning\fR) or this setting set to 0.
+This must be multiple of \fBsleep_interval\fR.
 
 .SH EXAMPLE
 .nf
 dynamic_tuning = 1
+sleep_interval = 1
 update_interval = 10
 .fi
 
