man: fixed typo
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/man/tuned-adm.8
+++ b/man/tuned-adm.8
@@ -129,7 +129,7 @@ enables scheduler autogroups for better response of interactive applications.
 .TP
 .BI "virtual-guest"
 Profile optimized for virtual guests based on throughput-performance profile.
-It additionally decreases virtual memory swapiness and increases dirty_ratio
+It additionally decreases virtual memory swappiness and increases dirty_ratio
 settings.
 
 .TP
